Fixed a menu spacing.

--- a/ toolshare --username trh8614@g.rit.edu/toolshare/static/main.css
+++ b/ toolshare --username trh8614@g.rit.edu/toolshare/static/main.css
@@ -19,7 +19,7 @@ img.logo{
 div.menu{
 	text-align: right;
 	float: right;
-	width: 30%;
+	width: 50%;
 	padding-top: .5em;
 	padding-right: .5em;
 	font-family: 'Tahoma';
